[package]
name = "chip8emu"
version = "0.1.0"
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
minifb = "0.19.1"
clap = "2.33.3"
hex = "0.4.2"
cpal = "0.13.1"
blip_buf = "0.1.4"
anyhow = "1.0.37"
