[package]
name = "ch8-rs"
version = "0.1.0"
authors = ["Moritz Schulte <mschulte.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
minifb = {version = "0.20", default-features = false, features = ["x11"]}
clap = "2.0"
hex = "0.4"
cpal = "0.13"
blip_buf = "0.1"
anyhow = "1.0"
